# amongo

./: .gitignore  README.md  pyproject.toml
amongo/: __init__.py  _compression.py  _flags.py  _header.py  _hello.py  collection.py  connection.py  cursor.py  errors.py
amongo/core/: compressors.py  errors.py  models.py  results.py  typings.py
examples/: simple.py
stubs/bson/: __init__.pyi
tests/: test_flags.py  test_parser.py
