[tool.poetry]
name = "amongo"
version = "0.1.0"
description = ""
authors = ["teaishealthy <teaishealthy@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bson = "^0.5.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.3"
black = "^23.12.1"

[tool.pyright]
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = true
stubPath = "stubs"

[tool.ruff]
include = ["amongo/*.py"]
select = ["ALL"]

ignore = [
    # even mypy knows that self is of type Self
    "ANN101", "ANN102",
    # i dont want docstrings everywhere
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Any is okay :D
    "ANN401",
    # todos don't need to be so bureaucratic
    "TD003", "FIX002",
    # my message ids don't need to be cryptographically safe
    "S311",
    # thing.open and open are two different things...
    "A003",
    # similary i don't care if i shadow a builtin
    "A002",
    # im accessing my own attributes, i know what im doing
    "SLF001",
    # i need more than 5 function args
    "PLR0913",
    # pyright ignores are way too verbose
    "PGH003"
]

[tool.ruff.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
